src/test/success/function_call.egern
func square(arg: int): int {
    return arg * arg;
}

print(square(4));
