src/test/fail/pass_argument_of_wrong_type_fail.egern
func square(n: int): int {
    return n * n
}

square(true)
